# purify

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .mailmap  .travis.yml  .zenodo.json  AllToAllSparseVector_8cc.html  AllToAllSparseVector_8cc__incl.map  AllToAllSparseVector_8cc__incl.md5  AllToAllSparseVector_8cc_source.html  AllToAllSparseVector_8h.html  AllToAllSparseVector_8h__dep__incl.map  AllToAllSparseVector_8h__dep__incl.md5  AllToAllSparseVector_8h__incl.map  AllToAllSparseVector_8h__incl.md5  AllToAllSparseVector_8h_source.html  CMakeLists.txt  CONTRIBUTORS_8md.html  CONTRIBUTORS_8md_source.html  DistributeSparseVector_8h.html  DistributeSparseVector_8h__dep__incl.map  DistributeSparseVector_8h__dep__incl.md5  DistributeSparseVector_8h__incl.map  DistributeSparseVector_8h__incl.md5  DistributeSparseVector_8h_source.html  Dockerfile  IndexMapping_8h.html  IndexMapping_8h__dep__incl.map  IndexMapping_8h__dep__incl.md5  IndexMapping_8h__incl.map  IndexMapping_8h__incl.md5  IndexMapping_8h_source.html  MANIFEST.binary.in  MANIFEST.source.in  PURIFY__CONTRIBUTORS_8md.html  PURIFY__CONTRIBUTORS_8md_source.html  README.md  README.rst  README.txt  (+869 more)
cpp/: AlgorithmUpdate.cc  AlgorithmUpdate.h  CMakeLists.txt  FFTOperator.cc  FFTOperator.h  MeasurementOperator.cc  MeasurementOperator.h  PSFOperator.cc  PSFOperator.h  RMOperator.cc  RMOperator.h  casacore.cc  casacore.h  clean.cc  clean.h  cmdl.cc  cmdl.h  config.in.h  kernels.cc  kernels.h  logging.disabled.h  logging.enabled.h  logging.h  main.cc  parameters.h  pfitsio.cc  pfitsio.h  purify.cc  purify.h  types.h  utilities.cc  utilities.h  wprojection.cc  wprojection.h
cpp/benchmarks/: CMakeLists.txt  degridding.cc  fft.cc  main.cc  measurement_operator.cc  measurement_operator_af.cc  measurement_operator_mpi.cc  measurement_operator_wproj.cc  padmm.cc  padmm_mpi.cc  utilities.cc  utilities.h  wavelet_operator.cc  wavelet_operator_mpi.cc
cpp/docs/: ARGUMENTS.md  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile.in  PURIFY_CONTRIBUTORS.md
cpp/example/: CMakeLists.txt  admm.cc  casa.cc  clean_m31_simulation.cc  clean_vla.cc  compare_wprojection.cc  fb_random_coverage.cc  generate_chirp.cc  generate_vis_data.cc  gridding.cc  gridding_mem.cc  histogram_equalisation.cc  image_coordinates.cc  image_rm_window.cc  image_wproj_chirp.cc  mem_w_algos.cc  mpi_spherical_reconstruction.cc  padmm_ami_coverage.cc  padmm_atca.cc  padmm_atca_1.cc  padmm_atca_2.cc  padmm_atca_PSF.cc  padmm_clean_m31_simulation.cc  padmm_clean_simulation.cc  padmm_cygA.cc  padmm_m31_simulation.cc  padmm_mpi_random_coverage.cc  padmm_mpi_real_data.cc  padmm_ms_clean_m31_simulation.cc  padmm_ms_clean_simulation.cc  padmm_random_coverage.cc  padmm_real_data.cc  padmm_reweighted_simulation.cc  padmm_simulation.cc  padmm_vla.cc  plot_rmkernel.cc  plot_wkernel.cc  primaldual_random_coverage.cc  primaldual_reweighted_simulation.cc  primaldual_reweighted_simulation.cc~  (+22 more)
cpp/purify/: AlgorithmUpdate.cc  AlgorithmUpdate.h  AllToAllSparseVector.cc  AllToAllSparseVector.h  CMakeLists.txt  DistributeSparseVector.h  FFTOperator.cc  FFTOperator.h  IndexMapping.h  MeasurementOperator.cc  MeasurementOperator.h  MeasurementOperator_mpi.cc  MeasurementOperator_mpi.h  PSFOperator.cc  PSFOperator.h  RMOperator.cc  RMOperator.h  algorithm_factory.h  casacore.cc  casacore.h  cimg.h  clean.cc  clean.h  cmdl.cc  cmdl.h  compact_operators.h  compact_operators_gpu.h  config.in.h  convergence_factory.h  convolution.h  distribute.cc  distribute.h  fly_operators.h  h5reader.h  integration.cc  integration.h  kernels.cc  kernels.h  leastsquares.cc  leastsquares.h  (+52 more)
cpp/regressions/: CMakeLists.txt  cdata.h  cwrappers.h  sdmm.cc
cpp/tests/: CMakeLists.txt  FFT_operator.cc  algo_factory.cc  casacore.cc  common_catch_main.cc  common_mpi_catch_main.cc  convolution.cc  data.in.h  directories.in.h  distribute.cc  distribute_sparse_vector.cc  index_mapping.cc  integration.cc  kernels.cc  kmeans.cc  measurement_factory.cc  measurement_operator.cc  mpi_algo_factory.cc  mpi_measurement_factory.cc  mpi_measurement_operator.cc  mpi_read_measurements.cc  mpi_spherical_resample.cc  mpi_utilities.cc  mpi_wavelet_factory.cc  mpi_wide_field_utilities.cc  operators.cc  operators_gpu.cc  parallel_mpi_utilities.cc  parse_yaml.cc  parser_test.cc  purify_fitsio.cc  purify_h5.cc  read_measurements.cc  rm_operator.cc  serial_vs_parallel_padmm.cc  sparse.cc  spherical_resample.cc  utilities.cc  utils.cc  uvfits.cc  (+4 more)
cpp/uncertainty_quantification/: CMakeLists.txt  uq_main.cc
include/: CMakeLists.txt  purify_config.in.h  purify_error.h  purify_image.h  purify_measurement.h  purify_ran.h  purify_sparsemat.h  purify_types.h  purify_utils.h  purify_visibility.h
python/: CMakeLists.txt  __init__.py  casa.py  fftw.pxd  fftw.pyx  griding.pyx  image.pyx  measurements.pxd  measurements.pyx  params.py  purify.base.pyx  purify.cparams.pxd  purify.cparams.pyx  purify.fftw.pxd  purify.image.pyx  purify.measurements.pxd  purify.measurements.pyx  purify.numpy_interface.pxd  purify.padmm.pyx  purify.rwsdmm.pyx  purify.sdmm.pyx  purify.sensing.pxd  purify.sensing.pyx  purify.sparse.pxd  purify.sparse.pyx  purify.sparsity_ops.pxd  purify.sparsity_ops.pyx  purify.visibility.pxd  purify.visibility.pyx  purify_image.xml  pyrap.py  sopt.pxd  sopt.pyx  sparse.pyx  sparsity_ops.pxd  sparsity_ops.pyx  task_purify_image.py  visibility.pyx
python/tests/: CMakeLists.txt  image_fixtures.py  random.pyx  sparse_testing.pyx  test_fftw.py  test_functors.py  test_image.py  test_image_fixtures.py  test_measurements.py  test_padmm.py  test_params.py  test_rwsdmm.py  test_sdmm.py  test_sensing_operator.py  test_sopt.py  test_sparse.py  test_sparsity_ops.py  test_visibility.py  (+2 more)
src/: CMakeLists.txt  Makefile  doxygen.config  example_30dor.c  example_ami.c  example_m31.c  example_m31_padmm.c  example_realdata.c  example_realdata_padmm.c  purify_about.c  purify_error.c  purify_image.c  purify_measurement.c  purify_ran.c  purify_sparsemat.c  purify_test.c  purify_utils.c  purify_visibility.c  test.cpp  yaml-parser.cpp  yaml-parser.h
(+796 files in other folders)
