add_subdirectory(purify)

if(tests OR examples)
  configure_file(tests/directories.in.h "${PROJECT_BINARY_DIR}/include/purify/directories.h")
endif()
if(examples)
  add_subdirectory(example)
endif()
if(tests)
  add_subdirectory(tests)
endif()

if(TARGET casacore::ms)
  add_executable(main main.cc cmdl.cc AlgorithmUpdate.cc)
  target_link_libraries(main libpurify)
  set_target_properties(main PROPERTIES OUTPUT_NAME ${PROJECT_BINARY_DIR}/purify)
endif()
